// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Quote link extension - plugin > should create separate paragraph for the quote link if it has other paragraphs 1`] = `
Array [
  Token {
    "attrs": Array [
      Array [
        "class",
        "yfm-quote-link",
      ],
    ],
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": Array [
      0,
      4,
    ],
    "markup": ">",
    "meta": null,
    "nesting": 1,
    "tag": "blockquote",
    "type": "yfm_quote-link_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": Array [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": Array [
      Token {
        "attrs": Array [
          Array [
            "href",
            "https://ya.ru",
          ],
          Array [
            "data-quotelink",
            "",
          ],
        ],
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 1,
        "tag": "a",
        "type": "link_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "Quote link",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": -1,
        "tag": "a",
        "type": "link_close",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "[Quote link](https://ya.ru){data-quotelink}",
    "hidden": false,
    "info": "",
    "level": 2,
    "map": Array [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": Array [
      2,
      3,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": Array [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "quote link first paragraph",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "quote link first paragraph",
    "hidden": false,
    "info": "",
    "level": 2,
    "map": Array [
      2,
      3,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": Array [
      3,
      4,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": Array [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "quote link second paragraph",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "quote link second paragraph",
    "hidden": false,
    "info": "",
    "level": 2,
    "map": Array [
      3,
      4,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": ">",
    "meta": null,
    "nesting": -1,
    "tag": "blockquote",
    "type": "yfm_quote-link_close",
  },
]
`;

exports[`Quote link extension - plugin > should parse markup with quote link to token stream 1`] = `
Array [
  Token {
    "attrs": Array [
      Array [
        "class",
        "yfm-quote-link",
      ],
    ],
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": Array [
      0,
      3,
    ],
    "markup": ">",
    "meta": null,
    "nesting": 1,
    "tag": "blockquote",
    "type": "yfm_quote-link_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": Array [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": Array [
      Token {
        "attrs": Array [
          Array [
            "href",
            "https://ya.ru",
          ],
          Array [
            "data-quotelink",
            "true",
          ],
        ],
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 1,
        "tag": "a",
        "type": "link_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "Quote link",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": -1,
        "tag": "a",
        "type": "link_close",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": " content after qoute link",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "[Quote link](https://ya.ru){data-quotelink=\\"true\\"} content after qoute link",
    "hidden": false,
    "info": "",
    "level": 2,
    "map": Array [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": Array [
      2,
      3,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": Array [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "quote link text",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "quote link text",
    "hidden": false,
    "info": "",
    "level": 2,
    "map": Array [
      2,
      3,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": ">",
    "meta": null,
    "nesting": -1,
    "tag": "blockquote",
    "type": "yfm_quote-link_close",
  },
]
`;
